@@ -1092,10 +1092,18 @@ bool wxNonOwnedWindowCocoaImpl::EnableFullScreenView(bool enable)
     if (enable)
     {
         collectionBehavior |= NSWindowCollectionBehaviorFullScreenPrimary;
+        collectionBehavior &= ~NSWindowCollectionBehaviorFullScreenAuxiliary;
     }
     else
     {
+        // Note that just turning "Full Screen Primary" is not enough, the
+        // window would still be made full screen when the green button in the
+        // title bar is pressed, and we need to explicitly turn on the "Full
+        // Screen Auxiliary" style to prevent this from happening. This works,
+        // at least under 10.11 and 10.14, even though it's not really clear
+        // from the documentation that it should.
         collectionBehavior &= ~NSWindowCollectionBehaviorFullScreenPrimary;
+        collectionBehavior |= NSWindowCollectionBehaviorFullScreenAuxiliary;
     }
     [m_macWindow setCollectionBehavior: collectionBehavior];
 
